@@ -736,6 +736,14 @@
             "diegohcg"
          ]
       },
+      "Diego Pino Garcia" : {
+         "emails" : [
+            "dpino@igalia.com"
+         ],
+         "nicks" : [
+            "dpino"
+         ]
+      },
       "Dinu Jacob" : {
          "emails" : [
             "dinu.s.jacob@intel.com"
