@@ -1,3 +1,9 @@
+2015-06-19  Diego Pino Garcia  <dpino@igalia.com>
+
+        Unreviewed. Add myself as a committer.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2015-06-19  Csaba Osztrogonác  <ossy@webkit.org>
 
         Remove unnecessary svn:executable flags
